# AgentBox_Device_Discovery

./: README.md
Client/: CMakeLists.txt  main.cpp
Server/: Cargo.toml
Server/src/: main.rs
